--- a/templates/venta_principal.ui
+++ b/templates/venta_principal.ui
@@ -1159,6 +1159,7 @@ background-color:rgb(100,100,100);
     <addaction name="actionRestaurar_Copia_Seguridad"/>
     <addaction name="separator"/>
     <addaction name="actionExportar_Datos_xls"/>
+    <addaction name="actionImportar_Datos_XLS"/>
    </widget>
    <addaction name="menuArchivo"/>
    <addaction name="menuCrear_Copia_Seguridad"/>
@@ -1264,6 +1265,11 @@ background-color:rgb(100,100,100);
   <action name="actionExportar_Datos_xls">
    <property name="text">
     <string>Exportar Datos XLS</string>
+   </property>
+  </action>
+  <action name="actionImportar_Datos_XLS">
+   <property name="text">
+    <string>Importar Datos XLS</string>
    </property>
   </action>
  </widget>
